@@ -1,7 +1,7 @@
 Package: copula
 Version: 1.0-1
 VersionNote: Last CRAN: 1.0-0 on 2020-05-19
-Date: 2020-11-20
+Date: 2020-11-27
 Title: Multivariate Dependence with Copulas
 Authors@R: c(person("Marius", "Hofert", role = "aut", email = "marius.hofert@uwaterloo.ca",       comment = c(ORCID = "0000-0001-8009-4665"))
 	   , person("Ivan", "Kojadinovic", role = "aut", email = "ivan.kojadinovic@univ-pau.fr",  comment = c(ORCID = "0000-0002-2903-1543"))
@@ -13,7 +13,7 @@ Authors@R: c(person("Marius", "Hofert", role = "aut", email = "marius.hofert@uwa
 Depends: R (>= 3.5.0)
 Imports: stats, graphics, methods, stats4, Matrix, lattice, colorspace,
 	gsl, ADGofTest, stabledist (>= 0.6-4), mvtnorm, pcaPP, pspline, numDeriv
-Suggests: MASS, KernSmooth, sfsmisc, scatterplot3d, Rmpfr, bbmle, knitr,
+Suggests: MASS, KernSmooth, sfsmisc, scatterplot3d, Rmpfr, bbmle, knitr, rmarkdown,
 	abind, crop, gridExtra, lcopula, mev, mvnormtest, parallel, partitions,
 	polynom, qrng, randtoolbox, rugarch, Runuran, tseries, VGAM, VineCopula, zoo
 SuggestsNote: packages {abind, ..., zoo} (last lines above) are only used
